Update on Overleaf.

--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -16,6 +16,7 @@
     % Chapters
     \chapter{RESULTS}\label{ch:results}
     %%%%%%%% This line gets rid of page number on first page of text
+    \vicki{need a better title}
     \thispagestyle{empty}
     %%%%%%%%%%%%%
     From determining the best breakfast cereal~\cite{Curtis2021} to electing the next
@@ -24,7 +25,7 @@
     individuals participating in such democratic processes, preventing them from
     expressing their voice and participating in deliberation, as well as decreasing
     the overall quality of the result.
-    Proxy voting is a method by which participants are able to have others vote on their
+    Proxy voting is a method by which participants are able to have others vote on their \vicki{Not clear what "their" refers to}
     behalf.
     We examine the ability of proxy voting to decrease the impact of such frustrations.
     We additionally determine strategies by which proxies and their constituents can
