Updated chapter counter

--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -14,6 +14,7 @@
     %{{{ The main body of the thesis
     \body  % set main body style
     % Chapters
+    \setcounter{chapter}{1}
     \chapter{RESULTS}\label{ch:results}
     %%%%%%%% This line gets rid of page number on first page of text
     \thispagestyle{empty}
