Fixed comments in chapter document

--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -15,7 +15,7 @@
     \body  % set main body style
     % Chapters
     \setcounter{chapter}{1}
-    \chapter{RESULTS}\label{ch:results}
+    \chapter{Analysis}\label{ch:analysis}
     %%%%%%%% This line gets rid of page number on first page of text
     \vicki{need a better title}
     \thispagestyle{empty}
@@ -26,14 +26,14 @@
     individuals participating in such democratic processes, preventing them from
     expressing their voice and participating in deliberation, as well as decreasing
     the overall quality of the result.
-    Proxy voting is a method by which participants are able to have others vote on their \vicki{Not clear what "their" refers to}
+    Proxy voting is a method by which participants are able to have others vote on their
     behalf.
     We examine the ability of proxy voting to decrease the impact of such frustrations.
     We additionally determine strategies by which proxies and their constituents can
     cooperate in order to reduce the change their absence would otherwise cause.
     These strategies include allowing proxies and constituents to aggregate their
-    preference into one result, as well as determining how best to aggregate all votes in
-    a unified-vote/single-winner/single-dimension continuous space model.
+    preference into one result, as well as determining how best to aggregate all votes
+    in a unified-vote/single-winner/single-dimension continuous space model.
 
     \input{content/chapter2/background}
     \input{common/preliminaries}
