Added suggested line

--- a/common/prelude.tex
+++ b/common/prelude.tex
@@ -52,7 +52,7 @@
 % To control where figures are output
 \usepackage{epstopdf}
 \pdfminorversion=7 % Because epstopdf outputs as version 1.7
-
+\pgfplotsset{compat=1.18}
 
 % Set spacing around figures and tables to triple space
 \setlength{\intextsep}{2em} % Vertical space above & below [h] floats
