--- a/common/figures/equations/weighted-midrange.tex
+++ b/common/figures/equations/weighted-midrange.tex
@@ -1,5 +1,5 @@
 \mathbf{mr}(\systemproxies) =
     \frac{
-        \agent_{\text{lowest}} + \agent_{\text{highest}}
+        \min{\truthof{\systemproxies}} + \max{\truthof{\systemproxies}}
     }
     {2}
