--- a/common/figures/equations/weighted-mean.tex
+++ b/common/figures/equations/weighted-mean.tex
@@ -1,3 +1,3 @@
 \mathbf{mn}(\systemproxies) =
     \frac{1}{\systemweight}
-    \sum_{\agent_i \in \systemproxies} {\weightof{\agent_i} \cdot \agent_i}
+    \sum_{\agent_i \in \systemproxies} {\weightof{\agent_i} \cdot \truthof{\agent_i}}
