--- a/common/figures/equations/weighted-median.tex
+++ b/common/figures/equations/weighted-median.tex
@@ -1,7 +1,9 @@
 \textbf{md}(\systemproxies) =
+    \truthof{
     \min\left\{
         \agent_i \in \systemproxies \text{ s.t. }
             \weightof{\agent_i} +
             \sum_{\agent_j \in \systemproxies}^{\agent_{i - 1}} \weightof{\agent_j}
         \geq \frac{\systemweight}{2}
+    }
 \right\}
