--- a/common/preliminaries.tex
+++ b/common/preliminaries.tex
@@ -151,9 +151,9 @@ With these notations, the mechanisms we use are
         active agent with the highest preference, divided by two.
     }
 \end{enumerate}
-Additionally, we will apply unweighted versions of these mechanisms against all active  \vicki{Unclear.  The only reason it is unweighted is because there is no weight.  Restate.}
-voters (to simulate if proxy voting was not allowed), and all voters, inactive and
-active (to simulate the best case where all agents vote).
+Additionally, we will apply these mechanisms against all active voters (to simulate
+if proxy voting was not allowed) and all voters, both active and inactive, (to simulate
+the best case where all agents vote), without any weights.
 These additional calculations serve as baselines to determine how well proxy voting
 works in these scenarios.
 
