Update on Overleaf.

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -31,7 +31,7 @@
     \begin{figure}[p]
         \centering
         \includegraphics[scale=0.55]
-        {content/chapter2/figures/distributions/Beta(50,_50)_error_as_percent_of_space_abs_mean}
+        {content/chapter2/figures/distributions/Beta_50_50_error_as_percent_of_space_abs_mean}
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \betadistribution{50}{50}.
@@ -73,7 +73,7 @@
     \begin{figure}[p]
         \centering
         \includegraphics[scale=0.55]
-        {content/chapter2/figures/distributions/Beta(4,_1)_error_as_percent_of_space_abs_mean}
+        {content/chapter2/figures/distributions/Beta_4_1_error_as_percent_of_space_abs_mean}
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \betadistribution{4}{1}.
@@ -87,7 +87,7 @@
     \begin{figure}[p]
         \centering
         \includegraphics[scale=0.55]
-        {content/chapter2/figures/distributions/Beta(0.3,_0.3)_error_as_percent_of_space_abs_mean}
+        {content/chapter2/figures/distributions/Beta_0.3_0.3_error_as_percent_of_space_abs_mean}
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \betadistribution{0.3}{0.3}.
