Renamed reference files

--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -27,4 +27,4 @@ a unified-vote/single-winner/single-dimension continuous space model.
 \input{content/chapter1/assumptions}
 \input{content/chapter1/contribution}
 
-\input{common/endmatter}
+\input{common/references}
