--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -29,4 +29,4 @@ in a unified-vote/single-winner/single-dimension continuous space model.
 \input{content/chapter2/results}
 \input{content/chapter2/conclusions}
 
-\input{common/endmatter}
+\input{common/references}
