Update on Overleaf.

--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -2,6 +2,8 @@
 %  This document contains chapter 1 of the thesis.
 %
 
+\renewcommand{\chptindicator}{chpt-1}
+
 \chapter{INTRODUCTION}\label{ch:introduction}
 %%%%%%%% This line gets rid of page number on first page of text
 \thispagestyle{empty}
