Fixed duplicate labels

--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -2,6 +2,8 @@
 %  This document contains chapter 2 of the thesis.
 %
 
+\renewcommand{\chptindicator}{ch2}
+
 \setcounter{chapter}{1}
 \chapter{Analysis}\label{ch:analysis}
 %%%%%%%% This line gets rid of page number on first page of text
