--- a/common/preliminaries.tex
+++ b/common/preliminaries.tex
@@ -1,12 +1,12 @@
-\section{Preliminary Setup}\label{sec:preliminary-setup}
+\section{Preliminary Setup}\label{sec:\chptindicator-preliminary-setup}
 
-\subsection{The Model}\label{subsec:the-model}
+\subsection{The Model}\label{subsec:\chptindicator-the-model}
 An important part of any study is the model it uses to represent the system being
 studied.
 We employ a model described by \etal{Cohensius} in their 2017
 article~\cite{Cohensius2017}.
 This model places voters' preferences in a single-dimension continuous
-metric~space~\systemspace, such as in~\autoref{fig:system-metric-space}.
+metric~space~\systemspace, such as in~\autoref{fig:\chptindicator-system-metric-space}.
 In this model, two points that are close together in the metric space represent
 similar preferences, while two points that are far apart represent very different
 preferences.
@@ -41,7 +41,7 @@ preference, rather than if it is greater or less than some amount.
         Alternatively, points towards the center may also prefer some type of
         compromise or alternative solution instead.
     }
-    \label{fig:system-metric-space}
+    \label{fig:\chptindicator-system-metric-space}
 \end{figure}
 
 Such a model is extremely flexible and can be interpreted in different ways.
@@ -111,7 +111,7 @@ model, since observing the continuous output allows for more granularity in the
 differences between proxy and non-proxy voting, as well as in the differences between
 voting rules.
 
-\subsection{Voting mechanisms}\label{subsec:voting-mechanisms}
+\subsection{Voting mechanisms}\label{subsec:\chptindicator-voting-mechanisms}
 This study also makes use of \textit{voting mechanisms} or \textit{voting rules},
 which are functions that map a set of preferences in~\systemspace\ to an outcome that
 also exists in~\systemspace.
@@ -157,7 +157,8 @@ the best case where all agents vote), without any weights.
 These additional calculations serve as baselines to determine how well proxy voting
 works in these scenarios.
 
-\subsection{Coordination Mechanisms}\label{subsec:coordination-mechanisms}
+\subsection{Coordination Mechanisms}
+\label{subsec:\chptindicator-coordination-mechanisms}
 There are also several ways an individual proxy can agree to cast its vote own behalf
 of its constituents.
 Each has different advantages and disadvantages for the proxy, its constituents, and
