--- a/thesis.tex
+++ b/thesis.tex
@@ -13,8 +13,9 @@
     %{{{ The main body of the thesis
     \body  % set main body style
     % Chapters
+    \newcommand{\chptindicator}{}
     \include{chapter1-introduction}
     \include{chapter2-results}
 
-    % \input{content/endmatter/appendix}
+    \input{content/endmatter/appendix}
 \end{document}
