--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -2,7 +2,7 @@
 %  This document contains chapter 1 of the thesis.
 %
 
-\newcommand{\chptindicator}{chpt-1}
+\renewcommand{\chptindicator}{ch1}
 
 \chapter{INTRODUCTION}\label{ch:introduction}
 %%%%%%%% This line gets rid of page number on first page of text
