--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -5,7 +5,7 @@
 \renewcommand{\chptindicator}{ch2}
 
 \setcounter{chapter}{1}
-\chapter{Analysis}\label{ch:analysis}
+\chapter{ANALYSIS}\label{ch:analysis}
 %%%%%%%% This line gets rid of page number on first page of text
 \thispagestyle{empty}
 %%%%%%%%%%%%%
@@ -24,8 +24,8 @@ These strategies include allowing proxies and constituents to aggregate their
 preference into one result, as well as determining how best to aggregate all votes
 in a unified-vote/single-winner/single-dimension continuous space model.
 
-\input{content/chapter2/background}
-\input{common/preliminaries}
+\input{content/common/previous-work}
+\input{content/common/preliminaries}
 \input{content/chapter2/assumptions}
 \input{content/chapter2/contribution}
 \input{content/chapter2/results}
