Removed extra TODO

--- a/common/frontmatter.tex
+++ b/common/frontmatter.tex
@@ -5,7 +5,7 @@
 \makecopyright        % optional
 
 \include{abstract}
-\include{publicabstract} % TODO: Update
+\include{publicabstract}
 \include{content/frontmatter/dedication}  % optional
 %\include{acknowl}     % optional TODO: Do I want acknowledgements?
 
