Added name of CS dean

--- a/common/cover-page.tex
+++ b/common/cover-page.tex
@@ -13,9 +13,8 @@
 %\fourthreader{Isaac Newton, Ph.D.}
 
 % Graduate Dean
-% TODO: Add the name and title of the CS graduate dean
-\graddean{FIX ME: CS GRADUATE DEAN}
-\deantitle{FIX ME: CS GRADUATE DEAN}
+\graddean{D. Richard Cutler, Ph.D}
+\deantitle{Vice Provost of Graduate Studies}
 
 % Degree Information
 \degree{Master of Science}
